--- a/jobTemplate/jobx-free-lite/base.html
+++ b/jobTemplate/jobx-free-lite/base.html
@@ -69,7 +69,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{% url 'predictions:job_seeker_predictions' %}">
                       <i class="lni-brain"></i> Prediction Models
                     </a>
                   </li>
@@ -87,7 +87,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{% url 'predictions:employer_predictions' %}">
                       <i class="lni-brain"></i> Prediction Models
                     </a>
                   </li>
