--- a/jobTemplate/jobx-free-lite/base.html
+++ b/jobTemplate/jobx-free-lite/base.html
@@ -86,10 +86,14 @@
                       <i class="lni-plus"></i> Post a New Job
                     </a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
                       <i class="lni-brain"></i> Prediction Models
                     </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="{% url 'predictions:campaign_conversion' %}"><i class="lni-bullhorn"></i> Campaign Conversion</a></li>
+                      <li><a class="dropdown-item" href="{% url 'predictions:employer_predictions' %}"><i class="lni-bar-chart"></i> Other Predictions</a></li>
+                    </ul>
                   </li>
                 {% endif %}
                 
