--- a/jobTemplate/jobx-free-lite/base.html
+++ b/jobTemplate/jobx-free-lite/base.html
@@ -219,8 +219,8 @@
     <script src="{% static 'js/jquery.slicknav.js' %}"></script>     
     <script src="{% static 'js/jquery.counterup.min.js' %}"></script>      
     <script src="{% static 'js/waypoints.min.js' %}"></script>     
-    <script src="{% static 'js/form-validator.min.js' %}"></script>
-    <script src="{% static 'js/contact-form-script.js' %}"></script>   
+    <!-- <script src="{% static 'js/form-validator.min.js' %}"></script> -->
+    <!-- <script src="{% static 'js/contact-form-script.js' %}"></script> -->   
     <script src="{% static 'js/main.js' %}"></script>
     
     {% block extra_js %}{% endblock %}
