--- a/jobTemplate/jobx-free-lite/base.html
+++ b/jobTemplate/jobx-free-lite/base.html
@@ -80,6 +80,9 @@
                       <a class="dropdown-item" href="{% url 'predictions:remote_work' %}">
                         Remote Work Predictor
                       </a>
+                      <a class="dropdown-item" href="{% url 'predictions:salary' %}">
+                        Salary Prediction
+                      </a>
                     </div>
                   </li>
                   
@@ -103,6 +106,9 @@
                     <div class="dropdown-menu" aria-labelledby="employerPredictionDropdown">
                       <a class="dropdown-item" href="{% url 'predictions:campaign_conversion' %}">
                         <i class="lni-bullhorn"></i> Campaign Conversion
+                      </a>
+                      <a class="dropdown-item" href="{% url 'predictions:salary' %}">
+                        <i class="lni-money-location"></i> Salary Prediction
                       </a>
                       <a class="dropdown-item" href="{% url 'predictions:employer_predictions' %}">
                         <i class="lni-bar-chart"></i> Other Predictions
